few copy changes, fixed padding in resources, eliminated wrap sizer from sticky nav

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -830,7 +830,7 @@ ul.activity-text li{ text-indent:-5px; }
 
 #resources {
     width: 100%;
-    padding: 20px 0 40px 0px;
+    padding: 20px 0 20px 0px;
     float: left;
 }
 
